# arch-reconstruct-ai

./: .env.local  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  langgraph.json  main.py  mcp_servers_config.json  pyproject.toml
.github/workflows/: Langchain_dependencies.yml  pylint.yml  test.yml
docs/: COMMIT-STYLE.md
experiments/: __init__.py
experiments/arch_reconstruct/: arch_recon.ipynb
experiments/langgraph_Studio/: agent.py  deep_agent.py  planning_agent.py  prompts.py  util.py
experiments/langgraph_studio/: __init__.py  agent.py  deep_agent.py  planning_agent.py  prompts.py  util.py
experiments/rag/: rag.ipynb  vector_store.py
experiments/tool-calling/: tool-calling.ipynb
experiments/tool_calling/: __init__.py  tool_calling.ipynb
experiments/utils/: __init__.py  _sanitize.py  agent_factory.py  mcp_client_factory.py  utils_configurations.py
scripts/workflow/: check_outdated_packages.py  parse_toml_dependencies.py
src/: __init__.py  mcp_servers_config.json  run.py
src/agent/: agent.py  agent_factory.py  config.py  dummy_agent.py  software_agent_state.py
src/agent/tools/: __init__.py  archlens.py  config.py  github.py  gitingest_helpers.py  human_in_the_loop.py  planning.py
src/mcp/: __init__.py  mcp_client_factory.py
src/mcp/utils/: _sanitize.py  utils_configurations.py
src/retrieval/: README.md  __init__.py  builder.py  config.py  embeddings.py  loaders.py  vector_store.py
src/utils/: __init__.py  format_message.py  services.py  validate_tools.py
tests/: README.md  conftest.py  uml_examples.py
tests/integration_tests/tools_tests/: __init__.py  (+1 more)
(+29 files in other folders)
