[project]
name = "arch-reconstruct-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.30.1",
    "langchain>=1.0.0a10",
    "langchain-core>=0.4.0.dev0",
    "langchain-experimental>=0.3.5rc1",
    "langchain-ollama>=0.3.8",
    "langchain-openai>=0.4.0.dev0",
    "langgraph>=1.0.0a4",
    "langgraph-prebuilt>=0.7.0a2",
    "markdownify>=1.2.0",
    "pip>=25.2",
    "pre-commit>=4.3.0",
]
