[project]
name = "arch-reconstruct-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.0.0a10",
    "langgraph>=1.0.0a4",
    "pre-commit>=4.3.0",
    "langchain-openai>=0.3.33",
    "langgraph-cli[inmem]>=0.4.2",
    "langgraph-prebuilt>=0.7.0a2"
]
