[project]
name = "arch-reconstruct-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.0.0a10",
    "langgraph>=1.0.0a4",
    "pre-commit>=4.3.0",
    "langchain-openai>=0.3.33",
    "langgraph-cli[inmem]>=0.4.2",
    "langgraph-prebuilt>=0.7.0a2",
    "gitpython>=3.1.45",
    "langchain-mcp-adapters>=0.1.10",
    "gitingest>=0.3.1",
    "ipykernel>=6.30.1",
    "numpy>=2.3.3",
    "langchain-community>=0.3.30",
    "langchain-text-splitters>=0.3.11",
    "pypdf>=6.1.1",
    "langchain-ollama>=0.3.10",
    "pylint>=3.3.9",
]
